# grove

./: .gitignore  CLAUDE.md  README.md  app.py  app.tcss  mypy.ini  pyproject.toml  pytest.ini  snapshot_report.html
src/: __init__.py  __main__.py  app.py  clone.py  config.py  screens.py  utils.py  widgets.py
tests/: conftest.py  test_bare_repo.py  test_cli.py  test_clone.py  test_config.py  test_git_info.py  test_integration.py  test_metadata.py  test_pr_creation.py  test_pr_status.py  test_sidebar.py  test_snapshots.py  test_tmux_integration.py  test_worktree_creation.py  test_worktree_deletion.py
tests/example_repo/.grove/: config.toml
tests/example_repo/.grove/metadata/bugfix-01/: description.md
tests/example_repo/.grove/metadata/feature-one/: description.md  notes.md  pr.md
