[tool.poetry]
name = "grove"
version = "0.1.0"
description = "A Git Worktree and Tmux Session Manager - modern terminal interface for managing Git worktrees"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
homepage = "https://github.com/yourusername/grove"
repository = "https://github.com/yourusername/grove"
keywords = ["git", "worktree", "tmux", "terminal", "tui", "textual"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
]
packages = [{include = "*.py"}, {include = "*.tcss"}]

[tool.poetry.dependencies]
python = "^3.13"
textual = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
mypy = "^1.0.0"
pytest-asyncio = "^0.23.0"

[tool.poetry.scripts]
grove = "app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"